added MCU VIEWING ORDER

--- a/public/related-projects.html
+++ b/public/related-projects.html
@@ -13,11 +13,21 @@
     <h2>Related Projects</h2>
     <main>
         <h3><a href="https://mcu.thomasrice.com">Marvel Cinematic Universe - Movie Selector</a></h3>
-        <p>This web app by Thomas Rice allows the user to explore possible watch orders by selecting
-            the movies they've watched.</p>
+        <p>
+            This web app by Thomas Rice allows the user to explore possible watch orders by selecting
+            the movies they've watched.
+        </p>
         <h3><a href="https://seanlennaerts.github.io/mcuverse/">MCU Bible Verse</a></h3>
-        <p>This web app by Sean Lennaerts allows the user to search for any Marvel quote,
-            and gives them the exact quote as well as formatting the quote with its timestamp as a bible verse.</p>
+        <p>
+            This web app by Sean Lennaerts allows the user to search for any Marvel quote,
+            and gives them the exact quote as well as formatting the quote with its timestamp as a bible verse.
+        </p>
+        <h3><a href="https://docs.google.com/spreadsheets/d/1Xfe--9Wshbb3ru0JplA2PnEwN7mVawazKmhWJjr_wKs/edit">MCU VIEWING ORDER</a></h3>
+        <p>
+            This google doc by Reddit users aaronp613 and Capn_Crotch lists every MCU movie, TV show episode,
+            short, and even various non-canonical promotional pieces, in chronological order, along with their runtimes
+            and a continuously up-to-date countdown to the next MCU release.
+        </p>
         <!--<h3><a href="https://www.smasters.net/mcutv">Unofficial MCUTV</a></h3>
         <p>This project by Samuel Masters edits the Infinity Saga movies into a
             50-episode TV series, with each episode containing scenes from multiple movies. </p>
